Fix extra spacing on sections after .page-heading, and above message content on details

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -69,6 +69,10 @@ header,
   width: 100%;
   padding: 0;
 
+  & + section {
+    padding-top: 0;
+  }
+
   @include mq(S, 'max-width') {
     display: none;
 
