--- a/src/scss/pages/_courier-message-details.scss
+++ b/src/scss/pages/_courier-message-details.scss
@@ -5,6 +5,7 @@
         /* Body - 1 */
         font-size: 18px;
         font-size: 1.125rem;
+        margin-top: 0;
     }
 
     &__sequence-no {
